fix(admin-layout): make header non scrollable out of viewport

--- a/src/admin/shared/layouts/AdminLayout/AdminLayout.scss
+++ b/src/admin/shared/layouts/AdminLayout/AdminLayout.scss
@@ -11,6 +11,11 @@ $admin-actions-bar-height: 8.4rem;
 		background: $color-gray-50;
 	}
 
+	.m-admin-layout-content {
+		overflow-y: auto;
+		height: calc(100vh - 64px);
+	}
+
 	h1 {
 		font-size: 2.4rem;
 		line-height: 2.4rem;
